// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Primes /> should add a prime 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c5:link,
.c5:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):active,
.c5:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c5[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c7:focus,
.c7:hover,
.c7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c4:hover .c9 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  width: auto;
  text-align: left;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c3 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  margin-left: 2rem;
}

.c8 {
  margin: 2rem 0;
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.4rem;
  }
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        name="primes[0].prime"
        value=""
      />
      <span
        aria-hidden="true"
        class="c3"
      >
        €
      </span>
    </div>
    <button
      class="c4 c5 c6"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c4 c7 c8"
    type="button"
  >
    Ajouter une prime
    <svg
      class="c9"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Primes /> should delete a primes 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c1:focus,
.c1:hover,
.c1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c0:hover .c3 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c2 {
  margin: 2rem 0;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.4rem;
  }
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <button
    class="c0 c1 c2"
    type="button"
  >
    Ajouter une prime
    <svg
      class="c3"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<Primes /> should render 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c5:link,
.c5:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):active,
.c5:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c5[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c7:focus,
.c7:hover,
.c7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c4:hover .c9 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  width: auto;
  text-align: left;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c3 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  margin-left: 2rem;
}

.c8 {
  margin: 2rem 0;
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.4rem;
  }
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        name="primes[0].prime"
        value="300"
      />
      <span
        aria-hidden="true"
        class="c3"
      >
        €
      </span>
    </div>
    <button
      class="c4 c5 c6"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c4 c7 c8"
    type="button"
  >
    Ajouter une prime
    <svg
      class="c9"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
